ui: linux: open pictures in viewer instead of chrome